[package]
name = "ntlm_connector"
version = "0.1.0"
authors = [
  "Zack Mullaly <zack.mullaly@stratumsecurity.com>",
  "Brian Henderson <brian.henderson@stratumsecurity.com>"
]

[dependencies]
bytes = "0.4"
futures = "^0.1"
hyper = "^0.11"
hyper-tls = "^0.1"
native-tls = "^0.1"
tokio-core = "^0.1"
tokio-io = "^0.1"
tokio-service = "^0.1"
tokio-tls = "^0.1"
winauth = "0.0.2"
base64 = "^0.6"
httparse = "^1.2"
